// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FinderListDropZone > should match if drag enter and is dragging 1`] = `
<div data-v-94df34d0="" class="drop-zone drag-over dragging">
  <div data-v-94df34d0="" style="flex-grow: 1;"></div>
</div>
`;

exports[`FinderListDropZone > should match if drag enter and not dragging 1`] = `
<div data-v-94df34d0="" class="drop-zone">
  <div data-v-94df34d0="" style="flex-grow: 1;"></div>
</div>
`;

exports[`FinderListDropZone > should match if drag leave and is dragging 1`] = `
<div data-v-94df34d0="" class="drop-zone dragging">
  <div data-v-94df34d0="" style="flex-grow: 1;"></div>
</div>
`;

exports[`FinderListDropZone > should match if drag leave and not dragging 1`] = `
<div data-v-94df34d0="" class="drop-zone">
  <div data-v-94df34d0="" style="flex-grow: 1;"></div>
</div>
`;

exports[`FinderListDropZone > should match snapshot 1`] = `
<div data-v-94df34d0="" class="drop-zone">
  <div data-v-94df34d0="" style="flex-grow: 1;"></div>
</div>
`;
